# ai-learning

./: .gitignore  README.md  ROADMAP.md  pyproject.toml
curriculum/02-transformers-deep/: README.md  readings.md
curriculum/04-finetuning/: README.md  readings.md
curriculum/05-evals-benchmarks/: README.md  readings.md
curriculum/07-rlhf-fundamentals/: README.md  readings.md
curriculum/08-constitutional-ai/: README.md  readings.md
curriculum/09-interpretability/: README.md  readings.md
curriculum/13-agents-tool-use/: README.md  readings.md
curriculum/14-code-generation/: README.md  readings.md
interview-prep/: README.md
interview-prep/behavioral/: prep.md
interview-prep/paper-discussions/: template.md
interview-prep/system-design/: scenarios.md
projects/01-transformer-scratch/: README.md
projects/02-rlhf-mini/: README.md
projects/03-interpretability/: README.md
projects/04-agent-framework/: README.md
projects/05-eval-suite/: README.md
projects/06-capstone/: README.md
quiz-prep/: README.md
quiz-prep/behavioral/: prep.md
quiz-prep/paper-discussions/: template.md
quiz-prep/system-design/: scenarios.md
tests/: test_cli.py
tracker/: __init__.py  cli.py  habits.py  progress.py  xp.py
tracker/data/: .gitkeep  log.json
