[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-learn"
version = "0.1.0"
description = "CLI habit tracker for AI learning curriculum"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "AI Learner" }
]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
]

[project.scripts]
ai-learn = "tracker.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["tracker"]
